# meridian-prototype-ai

./: .gitignore  README.md  vercel.json
backend/: discover_tools.py  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  discover_tools.py  main.py  mcp_client.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
