[project]
name = "meridian-prototype-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "gradio>=4.25.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.0",
]
